--- a/src/components/.gitignore
+++ b/src/components/.gitignore
@@ -1,9 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -18,6 +16,14 @@
 .env.test.local
 .env.production.local
 
+# Prettier config
+.prettierrc
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/src/config/index.js
+/src/modules_old
+
+.idea
